--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="{{ site.baseurl}}/css/styles.css">
 
     </head>
     <body>
@@ -18,30 +18,24 @@
 		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 		        <span class="sr-only">Toggle navigation</span>
 		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="/">{{ site.name }}</a>
+		      <a class="navbar-brand" href="{{ site.baseurl}}/">{{ site.name }}</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="#">Link</a></li>
-		        <li><a href="#">Link</a></li>
-		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <b class="caret"></b></a>
-		          <ul class="dropdown-menu">
-		            <li><a href="#">National</a></li>
-		            <li><a href="#">International</a></li>
-		            <li><a href="#">Sports</a></li>
-		            <li><a href="#">Separated link</a></li>
-		            <li><a href="#">One more separated link</a></li>
-		          </ul>
-		        </li>
+		        <li class="active"><a href="{{ site.baseurl}}/">Home</a></li>
+				<li><a href="#">National</a></li>
+		        <li><a href="#">International</a></li>
+				<li><a href="#">Politics</a></li>
+				<li><a href="#">Business</a></li>
+				<li><a href="#">Sports</a></li>
+				<li><a href="#">Fashion</a></li>
+				<li><a href="#">Science &amp; Technology</a></li>
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="#">Link</a></li>
+		        <li><a href="#">Contact</a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </nav>
